# dash-example

./: .gitignore  dash.dockerfile  docker-compose.yaml  pyproject.toml
dash_example/: __main__.py  app.py
