[tool.poetry]
name = "dash-example"
version = "0.1.0"
description = ""
authors = ["Dmitrii K <dmitriik@protonmail.com>"]
readme = "README.md"
packages = [{include = "dash_example"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
